# robocup-software

./: #makefile#  .clang-format  .clang-tidy  .cmake-format.py  .coveragerc  .cproject  .dockerignore  .editorconfig  .gitignore  .gitmodules  .mailmap  .pre-commit-config.yaml  .project  .pylintrc  .readthedocs.yaml  .readthedocs.yml  .style.yapf  .stylize.yml  .travis.yml  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  CTestConfiguration.ini  CTestTestfile.cmake  Coding.cpp  Coding.hpp  CodingStyle.cpp  Dockerfile  Dockerfile.16  Dockerfile.comp  Dockerfile.dev  Doxyfile  Makefile  README  README.md  Robocup.files  Robocup.includes  SConstruct  _a_v_r910_8hpp_source.html  _action_behavior_8hpp_source.html  (+4773 more)
Geometry2d/: CMakeLists.txt  package.xml
Geometry2d/include/: Point.hpp
Geometry2d/src/: Arc.cpp  CMakeLists.txt  Circle.cpp  CompositeShape.cpp  Line.cpp  Point.cpp  Polygon.cpp  Rect.cpp  Segment.cpp  TransformMatrix.cpp
Geometry2d/testing/: ArcTest.cpp  CMakeLists.txt  CircleTest.cpp  CompositeShapeTest.cpp  GeometryConversionsTest.cpp  LineTest.cpp  PointTest.cpp  PoseTest.cpp  RectTest.cpp  SegmentTest.cpp  TransformMatrixTest.cpp
Motion/: CMakeLists.txt  ConfigFile.cpp  InputHandler.cpp  InputHandler.hpp  MotionController.cpp  MotionController.hpp  PathPlanner.hpp  Pid.cpp  Pid.hpp  Robot.cpp  Robot.hpp  SimplePlanner.hpp  main.cpp
Motion/config/: real_china1.xml
MotionTest/: CMakeLists.txt  Graph.hpp  MainWindow.cpp  MainWindow.hpp  RobotPath.cpp  RobotPath.hpp  TrajectoryGen.cpp  TrajectoryGen.hpp
MotionTest/config/: sim.xml
MotionTest/ui/: motion.ui
Radio/: CMakeLists.txt  Cal_Window.hpp  Command_Thread.hpp  Radio.cpp  Robot_Table.hpp  cal_window.ui  crc.cpp  crc.hpp  new_protocol.txt
SoccSim/: .cproject  .project  CMakeLists.txt  CommandReceiver.cpp  CommandReceiver.hpp  Config.cpp  Config.hpp  InputHandler.cpp  InputHandler.hpp  JoystickInput.cpp  Radio.cpp  Radio.hpp  SConscript  SimControl.cpp  SimControl.hpp  SimControl.ui  SimVision.cpp  SimVision.hpp  SoccSim.kdev4  SoccSimWindow.cpp  SoccSimWindow.hpp  Viewer.cpp  Viewer.hpp  Vision.cpp  Vision.hpp  VisionGen.cpp  VisionGen.hpp  main.cpp
SoccSim/Physics/: Ball.cpp  Ball.hpp  Entity.cpp  Entity.hpp  Env.cpp  Env.hpp  Field.cpp  Field.hpp  MemoryStream.cpp  MemoryStream.hpp  Robot.cpp  Robot.hpp
Vision/: .cproject  .project  CMakeLists.txt  Camera_Thread.cpp  Camera_Thread.h  Camera_Window.cpp  Camera_Window.h  Colorspace_View.cpp  Colorspace_View.h  Colorspace_Window.h  Config_File.cpp  Config_File.h  Distortion_Setup.cpp  Distortion_Setup.h  GL_Camera_View.cpp  GL_Camera_View.h  Image.cpp  Image.h  Image_Texture.cpp  Image_Texture.h  Pattern_View.cpp  Pattern_Window.cpp  Pattern_Window.h  Setup_Mode.cpp  Setup_Mode.h  Transform_Setup.cpp  Transform_Setup.h  VisionData.hpp  main.cpp  main.hpp
bullet/: CMakeLists.txt  RoboCup_Bullet_Notes.txt  SConscript
clion_utils/: .gitignore  CMakeLists.txt
common/: AutoName.hpp  CMakeLists.txt  Constants.cpp  Constants.hpp  Field_Dimensions.cpp  Field_Dimensions.hpp  Field_Dimensions.hpp.orig  Field_Dimensions_t.hpp  GameState_ext.hpp  LinearAlgebra.cpp  LinearAlgebra.hpp  Network.hpp  Pid.cpp  Pid.hpp  PointTest.cpp  Referee.hpp  RefereeEnums.cpp  RefereeEnums.h  RefereeEnums.hpp  RobotSpecs.hpp  SConscript  Team.h  Utils.cpp  Utils.hpp  VisionDotPattern.hpp  cmake_wrapper.mk  git_version.hpp  multicast.cpp  multicast.hpp  package.xml  pidTuner.cpp  pidTuner.hpp  referee_enums.cpp  referee_enums.h  time.hpp
docs/: .gitignore  CMakeLists.txt  Doxyfile.in  conf.py  index.rst  requirements.txt
firmware/: .gitignore  CMakeLists.txt  CMakeLists.txt.orig  README.md  SConscript  SConstruct  arm.scons  avr.scons  dump_cmake_vars.cmake  packets-2008.txt  radio_timing.xls  robocup-firmware.sublime-project  robocup-software-firmware.sublime-project  urjtag.scons  xilinx.scons
gameplay/: Behavior.cpp  CMakeLists.txt  Condition.cpp  Condition.hpp  GameplayModule.cpp  GameplayModule.hpp  GraphNode.cpp  GraphNode.hpp  Named_Object.hpp  Opponent.cpp  Opponent.hpp  Play.hpp  Playbook.hpp  Predicate.hpp  Predicates.cpp  Predicates.hpp  Role.cpp  Window.hpp  play.g
geometry2d/: CMakeLists.txt  package.xml
geometry2d_msgs/: CMakeLists.txt  package.xml
log/: CMakeLists.txt  FieldView.cpp  FieldView.hpp  JogDial.cpp  JogDial.hpp  LogConsumer.hpp  LogControl.cpp  LogControl.hpp  LogFile.cpp  LogFile.hpp  LogModule.cpp  LogModule.hpp  TreeGen.hpp  TreeModel.cpp  TreeModel.hpp  TreeView.cpp  TreeView.hpp  gen_tree  latest_build
logging/: BSVLog.cpp  BSVLog.hpp  CMakeLists.txt  RJLog.cpp  RJLog.hpp  SConscript  SSLLog.cpp  SSLLog.hpp  convert_tcpdump.cpp  logConverter.cpp  log_converter.cpp  log_info  log_vision  robocup_log.py  simple_logger.cpp
lqr_lookup_table/: CMakeLists.txt  LqrLookupTableGenerator.cpp
modeling/: .gitignore  Aprox_PWM_Motor_Driver_Circu_msf.exp  BLDC.slx  BLDCTest.slx  BallModel.cpp  CMakeLists.txt  Global2Body.m  KalmanFilter.hpp  PWM_Motor_Driver_Circuit.slx  Robot.m  RobotLqr.m  RobotLqt.m  RobotParams.m  RobotWM.cpp  RobotWM.hpp  TrapezoidPath.m  WorldModel.cpp  WorldModel.hpp  cvtest.cpp  derive.m  difference_kalman.cpp  difference_kalman.hpp  kalman_test.cpp  motorParams.m  pwmGenerator.slx  readme.md  robocup_model.mdl  visualize.m  visualize_test.m
motion/: CMakeLists.txt  ConfigFile.cpp  ConfigFile.hpp  Controller.cpp  Controller.hpp  Dynamics.hpp  JoystickInput.cpp  JoystickInput.hpp  LinearController.cpp  LinearController.hpp  Motion.cpp  Motion.hpp  MotionModule.cpp  MotionModule.hpp  PathPlanner.cpp  PathPlanner.hpp  Robot.cpp  Robot.hpp  Trajectory.cpp  Trajectory.hpp  main.cpp
msgs/: CMakeLists.txt
protobuf/: CMakeLists.txt  Point.proto  package.xml
radio/: .cproject  .project  45-robocup.rules  85-robocup.rules  CMakeLists.txt  Radio.cpp  Radio.hpp  SConscript  USB_Device.cpp  USB_Device.hpp  main.cpp  radio_config.h
radiogen/: CMakeLists.txt  main.cpp
rj_common/: CMakeLists.txt  package.xml
rj_config/: CMakeLists.txt
rj_constants/: CMakeLists.txt  package.xml
rj_convert/: CMakeLists.txt
(+9677 files in other folders)
